<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Peer to Peer Network Controls</string>
    <string name="dummy_text">This is some sample text that I hope will wrap around when it gets long enough</string>
    <string name="service_status">Peer to Peer Service Status</string>
    <string name="start_p2p">Start</string>
    <string name="stop_p2p">Stop </string>
    <string name="bind_p2p">Connect </string>
    <string name="unbind_p2p">Disconnect</string>
    <string name="start_source">Start Source Server</string>
    <string name="stop_source">Stop Source Server</string>
    
</resources>
